hphp/test/slow/ext_hh_client/typecheck.php.expectf
object(HH\Client\TypecheckResult)#%d (3) {
  ["status":"HH\Client\TypecheckResult":private]=>
  int(2)
  ["error":"HH\Client\TypecheckResult":private]=>
  string(223) "Hack typechecking failed: server not ready. Unless you have run "hh_client" manually, you may be missing Hack type errors! Once the typechecker server has started up, the errors, if any, will then show up in this error log."
  ["rawResult":"HH\Client\TypecheckResult":private]=>
  NULL
}

object(HH\Client\TypecheckResult)#%d (3) {
  ["status":"HH\Client\TypecheckResult":private]=>
  int(0)
  ["error":"HH\Client\TypecheckResult":private]=>
  NULL
  ["rawResult":"HH\Client\TypecheckResult":private]=>
  array(3) {
    ["passed"]=>
    bool(true)
    ["errors"]=>
    array(0) {
    }
    ["version"]=>
    string(4) "mock"
  }
}
{"passed":true,"errors":[],"version":"mock"}
object(HH\Client\TypecheckResult)#%d (3) {
  ["status":"HH\Client\TypecheckResult":private]=>
  int(1)
  ["error":"HH\Client\TypecheckResult":private]=>
  string(55) "Hack type error: Invalid return type at test.php line 1"
  ["rawResult":"HH\Client\TypecheckResult":private]=>
  array(3) {
    ["passed"]=>
    bool(false)
    ["errors"]=>
    array(1) {
      [0]=>
      array(1) {
        ["message"]=>
        array(3) {
          [0]=>
          array(6) {
            ["descr"]=>
            string(19) "Invalid return type"
            ["path"]=>
            string(8) "test.php"
            ["line"]=>
            int(1)
            ["start"]=>
            int(1)
            ["end"]=>
            int(1)
            ["code"]=>
            int(4110)
          }
          [1]=>
          array(6) {
            ["descr"]=>
            string(16) "This is a string"
            ["path"]=>
            string(8) "test.php"
            ["line"]=>
            int(2)
            ["start"]=>
            int(2)
            ["end"]=>
            int(2)
            ["code"]=>
            int(4110)
          }
          [2]=>
          array(6) {
            ["descr"]=>
            string(30) "It is incompatible with an int"
            ["path"]=>
            string(8) "test.php"
            ["line"]=>
            int(1)
            ["start"]=>
            int(3)
            ["end"]=>
            int(3)
            ["code"]=>
            int(4110)
          }
        }
      }
    }
    ["version"]=>
    string(4) "mock"
  }
}
{"passed":false,"errors":[{"message":[{"descr":"Invalid return type","path":"test.php","line":1,"start":1,"end":1,"code":4110},{"descr":"This is a string","path":"test.php","line":2,"start":2,"end":2,"code":4110},{"descr":"It is incompatible with an int","path":"test.php","line":1,"start":3,"end":3,"code":4110}]}],"version":"mock"}
object(HH\Client\TypecheckResult)#%d (3) {
  ["status":"HH\Client\TypecheckResult":private]=>
  int(3)
  ["error":"HH\Client\TypecheckResult":private]=>
  string(%d) "Hack typechecking failed: typechecker command not found: %s/this_file_does_not_exist"
  ["rawResult":"HH\Client\TypecheckResult":private]=>
  NULL
}
{"passed":false,"errors":[{"message":[{"descr":"Hack typechecking failed: typechecker command not found: %s\/this_file_does_not_exist"}]}]}

Warning: Hack typechecking failed: server not ready. Unless you have run "hh_client" manually, you may be missing Hack type errors! Once the typechecker server has started up, the errors, if any, will then show up in this error log. in %s/typecheck.php on line %d

Warning: Hack type error: Invalid return type at test.php line 1 in %s/typecheck.php on line %d

Catchable fatal error: Hack type error: Invalid return type at test.php line 1 in %s/typecheck.php on line %d
